# RustNoteApp

./: .gitignore  README.md  USAGE.md  dailies.html  index.html  installation.html  outlook.txt  planning.html  print.html  searchindex.js  snippets.html  toc.html  toc.js
appendix/: sources.html
docs/: documentation.md  home_office_schedule.md  home_office_schedule_2.md  presentation.pptx
docs/assets/mmd/: auth.mmd  gantt_actual.mmd  gantt_planned.mmd  retrieval.mmd  storage.mmd
docs/assets/xlsx/: checklist_documentation_v1.3.xlsx
egui_test/: Cargo.toml  app_cache.db  encrypted_data.json
egui_test/src/: main.rs
executables/: rust_notes_app-0.1.0-x86_64.msi
main/: fn_descriptions.html  main.html  procedure.html
mdbook-output/: index.html
mdbook-output/appendix/: appendix.html  glossary.html
mdbook-output/main/: fn_descriptions.html
mdbook-output/snippets/: snippet_14.html  snippet_15.html  snippet_18.html  snippet_3.html  snippet_5.html  snippet_6.html  snippet_7.html  snippet_8.html
notes_app/: Cargo.toml  README.md
notes_app/assets/icons/: icon.icns
notes_app/src/: app.rs  auth.rs  crypto.rs  main.rs  note.rs  notes_ui.rs  settings_ui.rs  storage.rs  user.rs
notes_app_book/: book.toml
notes_app_book/book/: 404.html  dailies.html  planning.html  print.html  snippets.html  testing.html  toc.html  toc.js
notes_app_book/book/appendix/: appendix.html  glossary.html  sources.html
notes_app_book/book/main/: main.html  procedure.html
notes_app_book/src/: SUMMARY.md  dailies.md  decision_matrix.md  introduction.md  planning.md  snippets.md  testing.md
snippets/: snippet_1.html  snippet_10.html  snippet_11.html  snippet_12.html  snippet_13.html  snippet_16.html  snippet_17.html  snippet_18.html  snippet_2.html  snippet_4.html  snippet_9.html
(+37 files in other folders)
