[package]
name = "encrypted-text-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["default", "image"] }
image = { version = "0.25", features = ["png"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[profile.release]
opt-level = 2
