[package]
name = "secure-notes-app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "sync"] }
rfd = "0.14"
image = "0.24"
