[package]
name = "rust_notes_app"
version = "0.1.0"
edition = "2021"
authors = ["Matteo Cipriani <2007.matteo.l.s@gmail.com>"]
description = "A simple encrypted Notes App I developed as a project."
license = "MIT"
repository = "https://github.com/dthfan2007/RustNoteApp/"
readme = "README.md"

[dependencies]
egui = "0.29"
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "sync"] }
rfd = "0.14"
image = "0.24"

[package.metadata.windows_subsystem]
subsystem = "windows"
